# demo-cms-skytether

./: .gitattributes  README.md
demo-cms/: pyproject.toml
demo-cms/demo_cms/: create_substrait.py  etl.py  execute_substrait.py  model.py
demo-cms/resources/query-plans/: proj-housevalues.excerpt.txt  proj-housevalues.txt
demo-cms/resources/redfin/: readme.md
